--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
-    <meta name="description" content="Pontee en contacto con IMPRESIÓN3D, déjanos un mensaje y con justo nos ponemos en contacto con vos para comenzar tu proyecto." >
+    <meta name="keywords"
+        content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
+    <meta name="description"
+        content="Pontee en contacto con IMPRESIÓN3D, déjanos un mensaje y con justo nos ponemos en contacto con vos para comenzar tu proyecto.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -59,7 +61,8 @@
                         <label for="floatingInputNombre">Nombre</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInputApellido" placeholder="name@example.com">
+                        <input type="text" class="form-control" id="floatingInputApellido"
+                            placeholder="name@example.com">
                         <label for="floatingInputApellido">Apellido</label>
                     </div>
                     <div class="form-floating mb-3">
@@ -105,7 +108,7 @@
             <li><a href="https://www.linkedin.com" target="_blank"><i class="bi bi-linkedin"></i></a></li>
         </ul>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
