--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
-    <meta name="description" content="En IMPRESIÓN3D tenemos productos ya impresos listos para vender, elegí el que más te guste." >
+    <meta name="keywords"
+        content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
+    <meta name="description"
+        content="En IMPRESIÓN3D tenemos productos ya impresos listos para vender, elegí el que más te guste.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -47,8 +49,8 @@
             </div>
         </section>
 
-        <section class= "container-fluid">
-            <div class= "row contenedorCardsProductos">
+        <section class="container-fluid">
+            <div class="row contenedorCardsProductos">
                 <div class="col-12 col-md-6 col-lg-3 justify-content-center align-items-center CardsProductos ">
                     <div class="card shadow" style="width: 18rem;">
                         <img src="../imagenes/trabajosMuestra1.jpg"
@@ -90,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-            </div>    
+            </div>
         </section>
 
     </main>
