--- a/paginas/trabajos.html
+++ b/paginas/trabajos.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
-    <meta name="description" content="En IMPRESIÓN3D nos dedicamos a darle vida a tus proyectos, mira en nuestra galeria trabajos ya realizados." >
+    <meta name="keywords"
+        content="servicios de impresión 3d, impresión 3d, impresión de archivos stl, proceso de impresión FDM, impresión de consolas, souvenirs impresos en 3D, tiempo de comercialización más rápido, creación rápida de prototipos, desarrollo e innovación, producción de piezas en pequeña o gran escala, Thengiverse, Cults, 3Dmakers">
+    <meta name="description"
+        content="En IMPRESIÓN3D nos dedicamos a darle vida a tus proyectos, mira en nuestra galeria trabajos ya realizados.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
